--- a/src/css/index.css
+++ b/src/css/index.css
@@ -795,6 +795,10 @@ width:100%;
 height:100%;
 object-fit: contain;
 }
+.qr-code__img_two
+{
+position: relative;
+}
 .phone-wrapper
 {
   width:332.56px;
@@ -1810,7 +1814,6 @@ height: 34.62px;
 
   .qr-code__img_two
   {
-    position: relative;
     margin-right: -50px;
   }
   .app-refs img
