--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1098,6 +1098,11 @@ font-weight: normal;
 font-size: 18px;
 line-height: 25px;
 border:none;
+padding-left:23px;
+
+  }
+  &__textarea{
+    padding-top:23px;
   }
 
   // .feedback__inputs
