--- a/src/css/index.css
+++ b/src/css/index.css
@@ -281,6 +281,7 @@
 }
 
 .app-refs {
+  z-index: 5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -301,6 +302,22 @@
 .app-refs__app-store {
   max-width: 185px;
   max-height: 60px;
+}
+.app-refs__app-store:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+}
+.app-refs__app-store:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
+.app-refs__play-market:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+}
+.app-refs__play-market:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
 }
 
 /*mission-css--------------------------------------------------------------------------------------*/
@@ -1308,6 +1325,8 @@
   color: #FFFFFF;
 }
 .feedback__app-refs {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-top: 32.73px;
   width: 100%;
   max-width: 610.13px;
@@ -1318,11 +1337,27 @@
   height: 100%;
   width: 100%;
 }
+.feedback__app-store:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+}
+.feedback__app-store:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+}
 .feedback__play-market {
   max-width: 292.13px;
   max-height: 81.27px;
   width: 100%;
   height: 100%;
+}
+.feedback__play-market:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+}
+.feedback__play-market:active {
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
 }
 
 .spark {
