--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -247,6 +247,7 @@
   }
 }
 .app-refs {
+  z-index: 5;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -260,6 +261,20 @@ max-height: 60px;
   &__app-store{
     max-width: 185px;
 max-height: 60px;
+  }
+  &__app-store:hover{
+    transform:scale(1.03);
+
+  }
+  &__app-store:active{
+    transform:scale(.98);
+  }
+  &__play-market:hover{
+    transform:scale(1.03);
+
+  }
+  &__play-market:active{
+    transform:scale(.98);
   }
 }
 /*mission-css--------------------------------------------------------------------------------------*/
@@ -1222,6 +1237,7 @@ color: #FFFFFF;
   }
   // .feedback__app-refs
   &__app-refs {
+    flex-wrap: wrap;
     padding-top:32.73px;
     width:100%;
     max-width: 610.13px;
@@ -1235,11 +1251,25 @@ color: #FFFFFF;
     width:100%;
 
   }
+  &__app-store:hover{
+    transform:scale(1.03);
+
+  }
+  &__app-store:active{
+    transform:scale(.98);
+  }
   &__play-market{
     max-width: 292.13px;
     max-height: 81.27px;
     width:100%;
     height:100%;
+  }
+  &__play-market:hover{
+    transform:scale(1.03);
+
+  }
+  &__play-market:active{
+    transform:scale(.98);
   }
 
  
